Add list structure example

--- a/examples/party-example.html
+++ b/examples/party-example.html
@@ -1,9 +1,15 @@
+<a href="../index.html">Back</a></br>
+
+<h3>
+  Difference between mutate and immutable objects
+</h3>
+
 <script src="../node_modules/immutable/dist/immutable.min.js"></script>
 <script>
 "use strict";
 console.clear();
 
-document.write('<h3> Array Party - without Immutable library </h3> </br>');
+document.write('<h4> Array Party - without Immutable library </h4> </br>');
 let ArrayParty = (function(){
     console.log("-- ArrayParty");
 
@@ -38,7 +44,7 @@ let ArrayParty = (function(){
 
 ArrayParty();
 
-document.write('<h3> List Party - with Immutable library </h3> </br>');
+document.write('<h4> List Party - with Immutable library </h4> </br>');
 /**
 * The Immutable.List Party
 */
