--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<a href="examples/party-example.html">Party example</a>
+<h1> Immutable.js</h1>
+</br>
+<h3>
+  Party example
+</h3>
+<p>This example try to show the difference between mutate structures and immutable structures.</p>
+<p>Helps to understand why we should use immutable library.</p>
+<a href="examples/party-example.html">See example</a>
+<br />
+<h3>
+  Immutable.js data structures
+</h3>
+<ul>
+  <li><a href="examples/list-structure.html">List</a></i>
+  <li>Stack</i>
+  <li>map</i>
+  <li>OrderedMap</i>
+  <li>Set</i>
+  <li>OrderedSet</i>
+  <li>Record</i>
+  <li>Lazy Seq</i>
+</ul>
